# sharpearena

./: Cargo.toml  EVALUATION.md  README.md  RELEASING.md  release.toml
.github/workflows/: ci.yml  release.yml
crates/openoutcry/: Cargo.toml
crates/openoutcry-py/: Cargo.toml  pyproject.toml
crates/openoutcry-py/python/openoutcry/: __init__.py  baselines.py  cascade.py  check_env.py  checkpoint.py  confidence.py  curriculum.py  data_blocks.py  dataset.py  decision_parser.py  discrete.py  eval_seeds.py  execution.py  execution_noise.py  failure_taxonomy.py  forecast.py  generalization.py  gym.py  indicators.py  lob_env.py  mandate.py  market_env.py  metrics.py  minari_export.py  news.py  obs_extra.py  pairs.py  pettingzoo_env.py  portfolio_env.py  preprocessing.py  realism.py  regime_eval.py  registration.py  reward_misspecification.py  rewards.py  risk.py  spaces.py  vector.py  verifiers_env.py  wrappers.py  (+1 more)
crates/openoutcry-py/src/: lib.rs
crates/openoutcry-py/tests/: test_baselines.py  test_baselines_eval.py  test_cascade.py  test_checkpoint.py  test_confidence.py  test_conformance.py  test_curriculum.py  test_data_blocks.py  test_discrete.py  test_equivalence.py  test_eval_seeds.py  test_execution.py  test_failure_taxonomy.py  test_forecast.py  test_gym.py  test_indicators.py  test_kalman_pairs.py  test_kalman_trend.py  test_lob_env.py  test_market.py  test_market_making.py  test_metrics_panel.py  test_minari.py  test_news.py  test_obs_extra.py  test_pairs.py  test_pettingzoo.py  test_portfolio_env.py  test_preprocessing.py  test_realism.py  test_registration.py  test_reward_misspecification.py  test_richness.py  test_risk.py  test_trace.py  test_vector.py  test_verifiers.py
crates/openoutcry-wasm/: Cargo.toml
crates/openoutcry-wasm/src/: lib.rs
crates/openoutcry/src/: leaderboard_ci.rs  lib.rs  lob_market.rs  mandate.rs  market.rs  richness.rs  scenario_gen.rs
crates/sharpearena/: Cargo.toml  GOVERNANCE.md  README.md  release.toml
crates/sharpearena-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/sharpearena-py/python/sharpearena/: __init__.py  baselines.py  cascade.py  check_env.py  checkpoint.py  confidence.py  curriculum.py  data_blocks.py  dataset.py  discrete.py  eval_seeds.py  execution.py  execution_noise.py  failure_taxonomy.py  forecast.py  functional.py  generalization.py  gym.py  indicators.py  lob_env.py  lookahead_guard.py  mandate.py  market_env.py  market_making.py  mcp_server.py  metrics.py  minari_export.py  news.py  obs_extra.py  pairs.py  pettingzoo_env.py  portfolio_env.py  preprocessing.py  regime_eval.py  registration.py  reward_misspecification.py  rewards.py  risk.py  spaces.py  trace.py  (+4 more)
crates/sharpearena-py/src/: lib.rs
crates/sharpearena-py/tests/: test_baselines.py  test_baselines_eval.py  test_cascade.py  test_checkpoint.py  test_confidence.py  test_conformance.py  test_curriculum.py  test_data_blocks.py  test_discrete.py  test_equivalence.py  test_eval_seeds.py  test_execution.py  test_failure_taxonomy.py  test_forecast.py  test_functional.py  test_gym.py  test_indicators.py  test_kalman_pairs.py  test_kalman_trend.py  test_lob_env.py  test_market.py  test_market_making.py  test_metrics_panel.py  test_minari.py  test_news.py  test_obs_extra.py  test_pairs.py  test_pettingzoo.py  test_portfolio_env.py  test_preprocessing.py  test_realism.py  test_registration.py  test_reward_misspecification.py  test_richness.py  test_risk.py  test_runtime.py  test_trace.py  test_vector.py  test_verifiers.py
crates/sharpearena-wasm/: Cargo.toml
crates/sharpearena-wasm/src/: lib.rs
crates/sharpearena/contract/: decision.schema.json  observation.schema.json
crates/sharpearena/contract/conformance/: empty-portfolio-start.json  legacy-decision-shape.json  normal-multi-symbol.json  signed-weight-short.json  single-symbol.json
crates/sharpearena/examples/: reference-agent.py  reference-agent.ts  score-a-trajectory.rs
crates/sharpearena/src/: contract.rs  curriculum.rs  exec_noise.rs  lib.rs  lob_market.rs  mandate.rs  market.rs  vec_env.rs
crates/sharpearena/tests/: conformance.rs  smoke.rs
docs/: training.md
examples/prime-rl/: README.md  rl.toml
npm/openoutcry/: package.json
npm/sharpearena/: package-lock.json  package.json
npm/sharpearena/pkg/: openoutcry.d.ts  openoutcry.js  openoutcry_bg.wasm  openoutcry_bg.wasm.d.ts  package.json  sharpearena.d.ts  sharpearena.js  sharpearena_bg.js  sharpearena_bg.wasm  sharpearena_bg.wasm.d.ts
npm/sharpearena/src/: index.ts  types.ts
npm/sharpearena/test/: smoke.test.js
scripts/: build-openoutcry-wasm.sh  build-sharpearena-wasm.sh
