# Standalone (not a workspace member): a pyo3 extension-module needs a Python
# interpreter at build time, so it is built by maturin rather than `cargo --workspace`.
# Concrete fields (no `.workspace` inheritance) since it sits outside the workspace.
[package]
name = "openoutcry-py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings (pyo3) for OpenOutcry — the leak-free trading-agent environment."
repository = "https://github.com/general-liquidity/openoutcry"

[lib]
name = "openoutcry_py"
crate-type = ["cdylib"]

[dependencies]
openoutcry = { path = "../openoutcry", version = "0.1.0" }
sharpebench-core = "0.0.7"
serde_json = "1"

[dependencies.pyo3]
version = "0.29"
features = ["extension-module"]
