[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "openoutcry"
version = "0.5.0"
description = "OpenOutcry — a leak-free, point-in-time Gym for trading agents (Python distribution)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "General Liquidity, Inc." }]
keywords = ["trading", "agent", "environment", "backtest", "reinforcement-learning", "gymnasium"]
# PrimeIntellect Environments-Hub discoverability tags (read from [project].tags by the
# `prime` CLI at push time; ignored by maturin's PEP 621 parser, so the wheel is unaffected).
tags = ["train", "eval", "trading", "agent", "rl", "verifiers", "multi-turn", "leak-free"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "gymnasium>=1.0",
]

[project.optional-dependencies]
verifiers = ["verifiers"]
minari = ["minari"]
pettingzoo = ["pettingzoo"]

# Defaults for `vf-eval openoutcry` (read by verifiers' eval script from this table).
# A bare `vf-eval openoutcry` then scores 16 scenarios x 3 rollouts of the v1 taskset.
[tool.verifiers.eval]
num_examples = 16
rollouts_per_example = 3

[tool.maturin]
# Mixed Rust/Python layout: the pure-Python package lives under `python/openoutcry`,
# and the compiled pyo3 extension is placed inside it as `openoutcry.openoutcry_py`.
module-name = "openoutcry.openoutcry_py"
python-source = "python"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
