[package]
name = "openoutcry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenOutcry — leak-free point-in-time trading-agent environment (a Gym for trading agents)."
repository.workspace = true
keywords = ["trading", "agent", "environment", "backtest", "simulation"]
categories = ["science", "finance", "simulation"]

[dependencies]
sharpebench-sim = "0.0.8"
sharpebench-protocol = "0.0.8"
sharpebench-core = "0.0.8"
serde = { version = "1", features = ["derive"] }

# rayon parallelizes the batched step on native targets. Gated out of wasm32 (no
# threads there); the engine falls back to a serial loop with identical results.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
